syntax = "proto2";

package echo;

message EchoRequest {
    required string name = 1;
}

message EchoResponse {
    required string message = 1;
}

service EchoService {
  rpc GetEcho(EchoRequest) returns (EchoResponse);
}
